fix: Add fallback redirect to /docs when WebUI not available

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,13 +2,24 @@ server {
     listen 9621;
     server_name _;
 
-    # WebUI static files
-    location / {
+    # Root redirects to docs (WebUI fallback)
+    location = / {
+        # Try WebUI first, fallback to API docs
         root /app/lightrag/lightrag_webui/dist;
-        try_files $uri $uri/ /index.html;
+        try_files /index.html @docs_redirect;
     }
 
-    # API proxy
+    location @docs_redirect {
+        return 302 /docs;
+    }
+
+    # WebUI static files
+    location /assets/ {
+        root /app/lightrag/lightrag_webui/dist;
+        try_files $uri =404;
+    }
+
+    # API proxy - catch all API endpoints
     location /api/ {
         proxy_pass http://127.0.0.1:9620/;
         proxy_http_version 1.1;
@@ -23,7 +34,7 @@ server {
         proxy_connect_timeout 75s;
     }
 
-    # Direct API access (for external tools)
+    # Direct API access (for external tools and Cleo integration)
     location /docs {
         proxy_pass http://127.0.0.1:9620/docs;
         proxy_http_version 1.1;
@@ -67,6 +78,12 @@ server {
 
     location /graphs {
         proxy_pass http://127.0.0.1:9620/graphs;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    location /webui {
+        proxy_pass http://127.0.0.1:9620/webui;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
     }
