fix: Simplify nginx to proxy all requests to API

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,11 @@
 server {
     listen 9621;
     server_name _;
+    client_max_body_size 50M;
 
-    # Root redirects to docs (WebUI fallback)
-    location = / {
-        # Try WebUI first, fallback to API docs
-        root /app/lightrag/lightrag_webui/dist;
-        try_files /index.html @docs_redirect;
-    }
-
-    location @docs_redirect {
-        return 302 /docs;
-    }
-
-    # WebUI static files
-    location /assets/ {
-        root /app/lightrag/lightrag_webui/dist;
-        try_files $uri =404;
-    }
-
-    # API proxy - catch all API endpoints
-    location /api/ {
-        proxy_pass http://127.0.0.1:9620/;
+    # Proxy everything to LightRAG API
+    location / {
+        proxy_pass http://127.0.0.1:9620;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -32,59 +16,5 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 300s;
         proxy_connect_timeout 75s;
-    }
-
-    # Direct API access (for external tools and Cleo integration)
-    location /docs {
-        proxy_pass http://127.0.0.1:9620/docs;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-    }
-
-    location /openapi.json {
-        proxy_pass http://127.0.0.1:9620/openapi.json;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-    }
-
-    location /health {
-        proxy_pass http://127.0.0.1:9620/health;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-    }
-
-    # LightRAG specific endpoints
-    location /query {
-        proxy_pass http://127.0.0.1:9620/query;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_read_timeout 300s;
-    }
-
-    location /documents {
-        proxy_pass http://127.0.0.1:9620/documents;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        client_max_body_size 50M;
-    }
-
-    location /insert {
-        proxy_pass http://127.0.0.1:9620/insert;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        client_max_body_size 50M;
-        proxy_read_timeout 300s;
-    }
-
-    location /graphs {
-        proxy_pass http://127.0.0.1:9620/graphs;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-    }
-
-    location /webui {
-        proxy_pass http://127.0.0.1:9620/webui;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
     }
 }
