--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,25 @@ server {
     server_name _;
     client_max_body_size 50M;
 
-    # Proxy everything to LightRAG API
+    # WebUI static files (if built)
     location / {
+        root /app/lightrag/lightrag_webui/dist;
+        index index.html;
+        try_files $uri $uri/ /index.html =404;
+    }
+
+    # Fallback to API docs if WebUI not found
+    error_page 404 = @api_fallback;
+    
+    location @api_fallback {
         proxy_pass http://127.0.0.1:9620;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    # API endpoints - proxy to backend
+    location /api {
+        proxy_pass http://127.0.0.1:9620/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -13,8 +29,50 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
+    }
+
+    location /docs {
+        proxy_pass http://127.0.0.1:9620/docs;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    location /openapi.json {
+        proxy_pass http://127.0.0.1:9620/openapi.json;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    location /health {
+        proxy_pass http://127.0.0.1:9620/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    location /query {
+        proxy_pass http://127.0.0.1:9620/query;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_read_timeout 300s;
+    }
+
+    location /documents {
+        proxy_pass http://127.0.0.1:9620/documents;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    location /insert {
+        proxy_pass http://127.0.0.1:9620/insert;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_read_timeout 300s;
+    }
+
+    location /graphs {
+        proxy_pass http://127.0.0.1:9620/graphs;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
     }
 }
